// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 98,
  "toChain": "(rounded 12)",
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' > fee 1`] = `"(rounded 0.006)"`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 100,
  "toChain": 10,
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' > fee 1`] = `"(rounded 0.006)"`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 1000,
  "toChain": 0,
}
`;
